Use wait-for-db.sh instead of wait-for-it.sh (#167)
* Add psql client to docker image

* cleaup docker scripts and add wait-for-db.sh

* Set db name when connecting to psql

* Add wait-for-db.sh usage

* Add brace-quote to input params

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,10 @@ services:
       - MARQUEZ_PORT=5000
       - MARQUEZ_CONFIG=/usr/src/app/config.yml
       - POSTGRES_HOST=db
+      - POSTGRES_PORT=5432
       - POSTGRES_DB=marquez
       - POSTGRES_USER=buendia
       - POSTGRES_PASSWORD=macondo
-      - WAIT_TIMEOUT=60
     volumes:
       - ./config.yml:/usr/src/app/config.yml
     depends_on:
