--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
       - MARQUEZ_USER=buendia
       - MARQUEZ_PASSWORD=macondo
     volumes:
-      - ./docker/init-marquezdb.sh:/docker-entrypoint-initdb.d/init-marquezdb.sh
+      - ./docker/init-db.sh:/docker-entrypoint-initdb.d/init-db.sh
 
 networks:
     net:
