Instrument for jdbi metrics. (#241)
* Instrument for jdbi metrics.

* GEt metrics reigstry from env.

* spotlessApply to fixup checkstyle errors.

--- a/config.example.yml
+++ b/config.example.yml
@@ -11,3 +11,10 @@ db:
   url: jdbc:postgresql://${POSTGRES_HOST:-localhost}:${POSTGRES_PORT:-5432}/${POSTGRES_DB}
   user: ${POSTGRES_USER}
   password: ${POSTGRES_PASSWORD}
+
+metrics:
+  frequency: 1 minute
+  reporters:
+    - type: console
+      timeZone: UTC
+      output: stdout
