--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,11 +34,13 @@ jobs:
       - run: bash <(curl -s https://codecov.io/bash)
 
   release:
-    machine: true
+    docker:
+      - image: docker:git
     working_directory: ~/marquez
     steps:
       - checkout
       - setup_remote_docker
+      - run: apk add --update bash
       - run: ./docker/login.sh
       - run: ./docker/build-and-push.sh $CIRCLE_TAG
 
@@ -51,8 +53,6 @@ workflows:
           requires:
             - build
       - release:
-          requires:
-            - test
           filters:
             tags:
               only: /^[0-9]+(\.[0-9]+){2}$/
