Add auto release (#20)
* v1 of release checking

* Temporarily disable upload to allow for testing

* Escape string to avoid issue

* Remove colon to prevent circleCI issue

* Add a readme comment

* Improve error message

* Add license info

* Adjusting instructions

* Some changes to push automatically

* Changes made

* Adjust to new workflow

* v1 of release checking

* Upping version to 1.7

* Bump version: 0.1.7 → 0.1.8

* Bump version: 0.1.8 → 0.1.9

* Adjust script

* Bump version: 0.1.9 → 0.2.0

* Bump version: 0.2.0 → 1.0.0

* Bump version: 1.0.0 → 2.0.0

* Fix to release script to parse type correctly

* Bump version: 2.0.0 → 2.0.1

* Bump version: 2.0.1 → 3.0.0

* Bump version: 3.0.0 → 3.1.0

* Bump version: 3.1.0 → 3.1.1

* Bump version: 3.1.1 → 4.0.0

* Move release check

* Inline simple functions

* Add master branch check

* Fix to versioning

* Remove unnecessary change

* Minor fix

* Fix script error

* Reset version

* Fix to restore upload

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,6 +38,7 @@ jobs:
     working_directory: ~/marquez_python
     steps:
       - checkout
+      - run: ./.circleci/release_check.sh
       - run: pip install --user twine
       - run: python setup.py sdist
       - run: python -m twine upload --verbose dist/*
