Fix integration test and enable it in circleCi (#25)
* Fix integration test and enable it in circleCi

* make script executable :)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,6 +52,9 @@ workflows:
       - test:
           requires:
             - build
+      - integration:
+          requires:
+            - test
       - release:
           filters:
             tags:
