--- a/test/fixtures/vcr/test_job/test_create_job.yaml
+++ b/test/fixtures/vcr/test_job/test_create_job.yaml
@@ -25,7 +25,7 @@ interactions:
     method: PUT
     uri: http://localhost:8080/api/v1/namespaces/ns_for_job_test_1/jobs/some_job
   response:
-    body: {string: '{"name":"some_job","createdAt":1550272256924,"inputDataSetUrns":["input1","input2"],"outputDataSetUrns":["output1","output2"],"location":"some_location","description":null}'}
+    body: {string: '{"name":"some_job","createdAt":1550272256924,"inputDatasetUrns":["input1","input2"],"outputDatasetUrns":["output1","output2"],"location":"some_location","description":null}'}
     headers:
       Content-Length: ['172']
       Content-Type: [application/json]
