--- a/config.example.yml
+++ b/config.example.yml
@@ -26,9 +26,10 @@ logging:
       # layout:
       #   type: json
 
-metrics:
-  frequency: ${METRICS_FREQUENCY:-1 minute}
-  reporters:
-    - type: console
-      timeZone: UTC
-      output: stdout
+# Enables metric reportering to the console
+# metrics:
+#  frequency: ${METRICS_FREQUENCY:-1 minute}
+#  reporters:
+#    - type: console
+#      timeZone: UTC
+#      output: stdout
