--- a/build.gradle
+++ b/build.gradle
@@ -23,13 +23,13 @@ ext {
 }
 
 dependencies {
-  compile 'io.dropwizard.metrics:metrics-jdbi3:4.1.0-rc3'
-  compile 'io.dropwizard.modules:dropwizard-flyway:1.3.0-4'
   compile "io.dropwizard:dropwizard-core:${dropwizardVersion}"
   compile "io.dropwizard:dropwizard-jdbi3:${dropwizardVersion}"
   compile "io.dropwizard:dropwizard-json-logging:${dropwizardVersion}"
   compile "org.jdbi:jdbi3-postgres:${jdbi3Version}"
   compile "org.jdbi:jdbi3-sqlobject:${jdbi3Version}"
+  compile 'io.dropwizard.metrics:metrics-jdbi3:4.1.0'
+  compile 'io.dropwizard.modules:dropwizard-flyway:1.3.0-4'
   compile 'org.postgresql:postgresql:42.2.5'
   compileOnly "org.projectlombok:lombok:${lombokVersion}"
   annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
