Wip/class rename (#38)
* Adjusting naming convention

* Renames for top level directory

* Adjust tests for simplified import behavior

* Update the README to include new usage instructions

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       - run: pip install --user coverage
       - run: pip install --user -e .
       - run: pip install --user flake8
-      - run: python -m flake8
+      - run: python -m flake8 --extend-ignore=F401
 
   test:
     <<: *defaults
