--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ repositories {
 }
 
 ext {
-  dropwizardVersion = '1.3.9'
+  dropwizardVersion = '1.3.11'
   jdbi3Version = '3.8.2'
   lombokVersion = '1.18.8'
 }
@@ -36,7 +36,7 @@ dependencies {
 
   testCompile "org.jdbi:jdbi3-testing:${jdbi3Version}"
   testCompile 'com.opentable.components:otj-pg-embedded:0.13.1'
-  testCompile 'io.dropwizard:dropwizard-testing:1.3.9'
+  testCompile "io.dropwizard:dropwizard-testing:${dropwizardVersion}"
   testCompile 'junit:junit:4.12'
   testCompile 'org.mockito:mockito-core:2.27.0'
 }
