API refactoring for marquez python library (#74)
* Started updating source/dataset api

* fix failing tests

* fixing job/job run related tests and client

* fix styling issue

* address comments

* adding missing namespace fixtures

--- a/tests/fixtures/vcr/test_datasets/dataset_for_datasets_test.yaml
+++ b/tests/fixtures/vcr/test_datasets/dataset_for_datasets_test.yaml
@@ -1,7 +1,7 @@
 interactions:
 - request:
-    body: '{"name": "dataset_fixture_3", "datasourceUrn": "urn:datasource:redshift:financials_db505",
-      "description": "a dataset for testing"}'
+    body: '{"type": "DB_TABLE", "physicalName": "dataset_fixture_3", "sourceName":
+      "financials_db505", "description": "a dataset for testing"}'
     headers:
       Accept:
       - '*/*'
@@ -10,24 +10,24 @@ interactions:
       Connection:
       - keep-alive
       Content-Length:
-      - '130'
+      - '131'
       Content-Type:
       - application/json
       User-Agent:
-      - python-requests/2.21.0
-    method: POST
-    uri: http://localhost:8080/api/v1/namespaces/namespace_for_datasets_tests_3/datasets
+      - marquez-python/0.5.3
+    method: PUT
+    uri: http://localhost:5000/api/v1/namespaces/namespace_for_tests_3/datasets/dataset_fixture_3
   response:
     body:
-      string: '{"name":"dataset_fixture_3","createdAt":"2019-04-25T04:00:26.291549Z","urn":"urn:dataset:financials_db505:dataset_fixture_3","description":"a
+      string: '{"type":"DB_TABLE","name":"dataset_fixture_3","physicalName":"dataset_fixture_3","createdAt":"2019-10-09T19:02:38.624Z","updatedAt":"2019-10-09T19:02:38.624Z","sourceName":"financials_db505","description":"a
         dataset for testing"}'
     headers:
       Content-Length:
-      - '163'
+      - '229'
       Content-Type:
       - application/json
       Date:
-      - Thu, 25 Apr 2019 04:00:26 GMT
+      - Thu, 10 Oct 2019 00:47:24 GMT
     status:
       code: 200
       message: OK
