--- a/tests/fixtures/vcr/test_datasets/dataset_default_ns_for_datasets_test.yaml
+++ b/tests/fixtures/vcr/test_datasets/dataset_default_ns_for_datasets_test.yaml
@@ -1,7 +1,7 @@
 interactions:
 - request:
-    body: '{"name": "dataset_fixture_for_default_ns", "datasourceUrn": "urn:datasource:redshift:financials_db505",
-      "description": "a dataset for testing"}'
+    body: '{"type": "DB_TABLE", "physicalName": "dataset_fixture_for_default_ns",
+      "sourceName": "financials_db505", "description": "a dataset for testing"}'
     headers:
       Accept:
       - '*/*'
@@ -10,24 +10,24 @@ interactions:
       Connection:
       - keep-alive
       Content-Length:
-      - '143'
+      - '144'
       Content-Type:
       - application/json
       User-Agent:
-      - python-requests/2.21.0
-    method: POST
-    uri: http://localhost:8080/api/v1/namespaces/default/datasets
+      - marquez-python/0.5.3
+    method: PUT
+    uri: http://localhost:5000/api/v1/namespaces/default/datasets/dataset_fixture_for_default_ns
   response:
     body:
-      string: '{"name":"dataset_fixture_for_default_ns","createdAt":"2019-04-25T04:01:00.474822Z","urn":"urn:dataset:financials_db505:dataset_fixture_for_default_ns","description":"a
+      string: '{"type":"DB_TABLE","name":"dataset_fixture_for_default_ns","physicalName":"dataset_fixture_for_default_ns","createdAt":"2019-10-10T00:58:26.401Z","updatedAt":"2019-10-10T00:58:26.401Z","sourceName":"financials_db505","description":"a
         dataset for testing"}'
     headers:
       Content-Length:
-      - '189'
+      - '255'
       Content-Type:
       - application/json
       Date:
-      - Thu, 25 Apr 2019 04:01:00 GMT
+      - Thu, 10 Oct 2019 00:58:26 GMT
     status:
       code: 200
       message: OK
