--- a/tests/fixtures/vcr/test_jobruns/job_for_jobruns_tests.yaml
+++ b/tests/fixtures/vcr/test_jobruns/job_for_jobruns_tests.yaml
@@ -1,7 +1,7 @@
 interactions:
 - request:
-    body: '{"inputDatasetUrns": ["input1", "input2"], "outputDatasetUrns": ["output1",
-      "output2"], "location": "some_location"}'
+    body: '{"inputs": ["input1", "input2"], "outputs": ["output1", "output2"], "location":
+      "https://github.com/wework/jobs/commit/124f", "type": "BATCH"}'
     headers:
       Accept:
       - '*/*'
@@ -10,24 +10,24 @@ interactions:
       Connection:
       - keep-alive
       Content-Length:
-      - '116'
+      - '142'
       Content-Type:
       - application/json
       User-Agent:
-      - python-requests/2.21.0
+      - marquez-python/0.5.3
     method: PUT
-    uri: http://localhost:8080/api/v1/namespaces/ns_name_for_testing/jobs/some_job
+    uri: http://localhost:5000/api/v1/namespaces/ns_name_for_testing/jobs/some_job
   response:
     body:
-      string: '{"name":"some_job","createdAt":1556153999132,"inputDatasetUrns":["input1","input2"],"outputDatasetUrns":["output1","output2"],"location":"some_location","description":null}'
+      string: '{"type":"BATCH","name":"some_job","createdAt":"2019-10-14T22:17:43.258Z","updatedAt":"2019-10-14T22:17:43.282Z","inputs":[],"outputs":[],"location":"https://github.com/wework/jobs/commit/124f","description":null}'
     headers:
       Content-Length:
-      - '172'
+      - '212'
       Content-Type:
       - application/json
       Date:
-      - Thu, 25 Apr 2019 00:59:59 GMT
+      - Mon, 14 Oct 2019 22:34:27 GMT
     status:
-      code: 201
-      message: Created
+      code: 200
+      message: OK
 version: 1
