--- a/tests/fixtures/vcr/test_jobruns/jobrun_for_jobruns_tests.yaml
+++ b/tests/fixtures/vcr/test_jobruns/jobrun_for_jobruns_tests.yaml
@@ -1,7 +1,6 @@
 interactions:
 - request:
-    body: '{"nominalStartTime": "2019-04-24 17:59:59.234056", "nominalEndTime": "2019-04-25
-      17:59:59.234056", "runArgs": "-a 1 -b 2 --some-flag"}'
+    body: '{"nominalStartTime": "2019-10-14T21:20:04.586Z", "nominalEndTime": "2019-10-14T22:20:04.586Z"}'
     headers:
       Accept:
       - '*/*'
@@ -10,26 +9,24 @@ interactions:
       Connection:
       - keep-alive
       Content-Length:
-      - '134'
+      - '94'
       Content-Type:
       - application/json
       User-Agent:
-      - python-requests/2.21.0
+      - marquez-python/0.5.3
     method: POST
-    uri: http://localhost:8080/api/v1/namespaces/ns_name_for_testing/jobs/some_job/runs
+    uri: http://localhost:5000/api/v1/namespaces/ns_name_for_testing/jobs/some_job/runs
   response:
     body:
-      string: '{"runId":"22e13ffd-336b-45ce-979f-fc68c0680b52","nominalStartTime":"2019-04-24
-        17:59:59.234056","nominalEndTime":"2019-04-25 17:59:59.234056","runArgs":"-a
-        1 -b 2 --some-flag","runState":"NEW"}'
+      string: '{"createdAt":"2019-10-14T22:34:27.754Z","updatedAt":"2019-10-14T22:34:27.758Z","nominalStartTime":"2019-10-14T21:20:04.586Z","nominalEndTime":"2019-10-14T22:20:04.586Z","runId":"aa7fd81a-16e3-42b1-87c1-10329232bbdb","runState":"NEW","runArgs":{}}'
     headers:
       Content-Length:
-      - '193'
+      - '246'
       Content-Type:
       - application/json
       Date:
-      - Thu, 25 Apr 2019 00:59:59 GMT
+      - Mon, 14 Oct 2019 22:34:27 GMT
     status:
-      code: 201
-      message: Created
+      code: 200
+      message: OK
 version: 1
