--- a/tests/fixtures/vcr/test_jobruns/test_get_jobrun.yaml
+++ b/tests/fixtures/vcr/test_jobruns/test_get_jobrun.yaml
@@ -1,6 +1,6 @@
 interactions:
 - request:
-    body: null
+    body: '{}'
     headers:
       Accept:
       - '*/*'
@@ -9,19 +9,23 @@ interactions:
       Connection:
       - keep-alive
       Content-Length:
-      - '0'
+      - '2'
+      Content-Type:
+      - application/json
       User-Agent:
-      - python-requests/2.21.0
-    method: PUT
-    uri: http://localhost:8080/api/v1/jobs/runs/22e13ffd-336b-45ce-979f-fc68c0680b52/run
+      - marquez-python/0.5.3
+    method: POST
+    uri: http://localhost:5000/api/v1/jobs/runs/aa7fd81a-16e3-42b1-87c1-10329232bbdb/start
   response:
     body:
-      string: ''
+      string: '{"createdAt":"2019-10-14T22:34:27.754Z","updatedAt":"2019-10-14T22:34:27.778Z","nominalStartTime":"2019-10-14T21:20:04.586Z","nominalEndTime":"2019-10-14T22:20:04.586Z","runId":"aa7fd81a-16e3-42b1-87c1-10329232bbdb","runState":"RUNNING","runArgs":{}}'
     headers:
       Content-Length:
-      - '0'
+      - '250'
+      Content-Type:
+      - application/json
       Date:
-      - Thu, 25 Apr 2019 00:59:59 GMT
+      - Mon, 14 Oct 2019 22:34:27 GMT
     status:
       code: 200
       message: OK
@@ -35,21 +39,19 @@ interactions:
       Connection:
       - keep-alive
       User-Agent:
-      - python-requests/2.21.0
+      - marquez-python/0.5.3
     method: GET
-    uri: http://localhost:8080/api/v1/jobs/runs/22e13ffd-336b-45ce-979f-fc68c0680b52
+    uri: http://localhost:5000/api/v1/jobs/runs/aa7fd81a-16e3-42b1-87c1-10329232bbdb
   response:
     body:
-      string: '{"runId":"22e13ffd-336b-45ce-979f-fc68c0680b52","nominalStartTime":"2019-04-24
-        17:59:59.234056","nominalEndTime":"2019-04-25 17:59:59.234056","runArgs":"-a
-        1 -b 2 --some-flag","runState":"RUNNING"}'
+      string: '{"createdAt":"2019-10-14T22:34:27.754Z","updatedAt":"2019-10-14T22:34:27.778Z","nominalStartTime":"2019-10-14T21:20:04.586Z","nominalEndTime":"2019-10-14T22:20:04.586Z","runId":"aa7fd81a-16e3-42b1-87c1-10329232bbdb","runState":"RUNNING","runArgs":{}}'
     headers:
       Content-Length:
-      - '197'
+      - '250'
       Content-Type:
       - application/json
       Date:
-      - Thu, 25 Apr 2019 00:59:59 GMT
+      - Mon, 14 Oct 2019 22:34:27 GMT
       Vary:
       - Accept-Encoding
     status:
