--- a/tests/fixtures/vcr/test_namespaces/test_namespaces_not_set.yaml
+++ b/tests/fixtures/vcr/test_namespaces/test_namespaces_not_set.yaml
@@ -1,21 +1,33 @@
 interactions:
 - request:
-    body: '{"inputDatasetUrns": ["input1", "input2"], "outputDatasetUrns": ["output1",
-      "output2"], "location": "some_location"}'
+    body: '{"inputs": ["input1", "input2"], "outputs": ["output1", "output2"], "location":
+      "https://github.com/124f", "type": "BATCH"}'
     headers:
-      Accept: ['*/*']
-      Accept-Encoding: ['gzip, deflate']
-      Connection: [keep-alive]
-      Content-Length: ['116']
-      Content-Type: [application/json]
-      User-Agent: [python-requests/2.20.1]
+      Accept:
+      - '*/*'
+      Accept-Encoding:
+      - gzip, deflate
+      Connection:
+      - keep-alive
+      Content-Length:
+      - '123'
+      Content-Type:
+      - application/json
+      User-Agent:
+      - marquez-python/0.5.3
     method: PUT
-    uri: http://localhost:8080/api/v1/namespaces/default/jobs/some_job
+    uri: http://localhost:5000/api/v1/namespaces/default/jobs/some_job
   response:
-    body: {string: '{"name":"some_job","createdAt":1556151538713,"inputDatasetUrns":["input1","input2"],"outputDatasetUrns":["output1","output2"],"location":"some_location","description":null}'}
+    body:
+      string: '{"type":"BATCH","name":"some_job","createdAt":"2019-10-17T21:39:36.901Z","updatedAt":"2019-10-17T21:39:36.927Z","inputs":[],"outputs":[],"location":"https://github.com/124f","description":null}'
     headers:
-      Content-Length: ['172']
-      Content-Type: [application/json]
-      Date: ['Thu, 25 Apr 2019 00:20:37 GMT']
-    status: {code: 201, message: Created}
+      Content-Length:
+      - '193'
+      Content-Type:
+      - application/json
+      Date:
+      - Thu, 17 Oct 2019 22:20:15 GMT
+    status:
+      code: 200
+      message: OK
 version: 1
