--- a/src/test/resources/config.test.yml
+++ b/src/test/resources/config.test.yml
@@ -11,3 +11,7 @@ db:
   url: jdbc:postgresql://${POSTGRES_HOST:-localhost}:${POSTGRES_PORT:-5432}/${POSTGRES_DB}
   user: ${POSTGRES_USER}
   password: ${POSTGRES_PASSWORD}
+
+flyway:
+  connectRetries: 3
+  cleanDisabled: true
