Add tagging support for dataset fields (#675)
* WIP

Signed-off-by: wslulciuc <willy.lulciuc@wework.com>

* Add class service.Tag

Signed-off-by: wslulciuc <willy.lulciuc@wework.com>

* Add dataset field check on tagging

Signed-off-by: wslulciuc <willy.lulciuc@wework.com>

* Add class DatasetDaoTest

Signed-off-by: wslulciuc <willy.lulciuc@wework.com>

* Add DatasetDaoTest.testLastModified

Signed-off-by: wslulciuc <willy.lulciuc@wework.com>

* Force tag uppercase

Signed-off-by: wslulciuc <willy.lulciuc@wework.com>

* More dataset dao tests

Signed-off-by: wslulciuc <willy.lulciuc@wework.com>

* Add class TagDaoTest

Signed-off-by: wslulciuc <willy.lulciuc@wework.com>

Co-authored-by: Willy Lulciuc <willy.lulciuc@wework.com>

--- a/config.example.yml
+++ b/config.example.yml
@@ -42,3 +42,9 @@ logging:
 #    - type: console
 #      timeZone: UTC
 #      output: stdout
+
+tags:
+  - name: PII
+    description: Personally identifiable information
+  - name: SENSITIVE
+    description: Contains sensitive information
