--- a/config.example.yml
+++ b/config.example.yml
@@ -1,3 +1,18 @@
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
+### HTTP SERVER CONFIG ###
+
+# Enables HTTP server configuration overrides (see: https://www.dropwizard.io/en/stable/manual/configuration.html#servers)
 server:
   applicationConnectors:
   - type: http
@@ -12,6 +27,9 @@ server:
   #       layout:
   #         type: access-json
 
+### DATABASE CONFIG ###
+
+# Enables database configuration overrides (see: https://www.dropwizard.io/en/stable/manual/configuration.html#database)
 db:
   driverClass: org.postgresql.Driver
   url: jdbc:postgresql://${POSTGRES_HOST:-localhost}:${POSTGRES_PORT:-5432}/${POSTGRES_DB}
@@ -23,9 +41,12 @@ db:
 #   connectRetries: 3
 #   cleanDisabled: true
 
-# Enables db migration on startup (default: true)
+# Enables database migration on startup (default: true)
 migrateOnStartup: ${MIGRATE_ON_STARTUP:-true}
 
+### LOGGING CONFIG ###
+
+# Enables logging configuration overrides (see: https://www.dropwizard.io/en/stable/manual/configuration.html#logging)
 logging:
   # Levels: TRACE, DEBUG, INFO, WARN, ERROR, FATAL, ALL, OFF
   level: ${LOG_LEVEL:-INFO}
@@ -35,7 +56,9 @@ logging:
       # layout:
       #   type: json
 
-# Enables metric reportering to the console
+### METRICS CONFIG ###
+
+# Enables metric reportering to the console (see: https://www.dropwizard.io/en/stable/manual/configuration.html#metrics)
 # metrics:
 #  frequency: ${METRICS_FREQUENCY:-1 minute}
 #  reporters:
@@ -43,6 +66,9 @@ logging:
 #      timeZone: UTC
 #      output: stdout
 
+### CUSTOMIZATION ###
+
+# Fill in with custom tags. Below, we have provided some sample tags to get started.
 tags:
   - name: PII
     description: Personally identifiable information
