--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
-version: "3.3"
+version: "3.7"
 services:
   app:
-    build: .
+    image: marquezproject/marquez:latest
     ports:
       - "5000:5000"
       - "5001:5001"
@@ -22,7 +22,7 @@ services:
     entrypoint: ["./wait-for-it.sh", "db:5432", "--", "./entrypoint.sh"]
 
   db:
-    image: "postgres:12.1"
+    image: postgres:12.1
     ports:
       - "5432:5432"
     environment:
