--- a/build.gradle
+++ b/build.gradle
@@ -13,14 +13,15 @@ plugins {
 }
 
 repositories {
+  mavenLocal()
   mavenCentral()
 }
 
 ext {
-  dropwizardVersion = '2.0.8'
-  jdbi3Version = '3.12.2'
+  dropwizardVersion = '2.0.9'
+  jdbi3Version = '3.13.0'
   lombokVersion = '1.18.12'
-  prometheusVersion = '0.8.0'
+  prometheusVersion = '0.9.0'
 }
 
 dependencies {
@@ -40,6 +41,7 @@ dependencies {
   annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
 
   testCompile "io.dropwizard:dropwizard-testing:${dropwizardVersion}"
+  testCompile 'io.github.marquezproject:marquez-java:0.4.0'
   testCompile "org.jdbi:jdbi3-testing:${jdbi3Version}"
   testCompile 'junit:junit:4.12'
   testCompile 'org.assertj:assertj-core:3.11.1'
