--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,3 +33,4 @@ services:
       - MARQUEZ_PASSWORD=macondo
     volumes:
       - ./docker/init-db.sh:/docker-entrypoint-initdb.d/init-db.sh
+    # command: ["postgres", "-c", "log_statement=all"]
