Set release branch name as 'main'
Signed-off-by: wslulciuc <willy@datakin.com>

--- a/build.gradle
+++ b/build.gradle
@@ -105,6 +105,12 @@ task javadocJar(type: Jar, dependsOn: javadoc) {
   from javadoc.destinationDir
 }
 
+release {
+  git {
+    requireBranch = 'main'
+  }
+}
+
 publishing {
   publications {
     mavenJava(MavenPublication) {
